Fix incorrect stretch of profile image

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -173,6 +173,7 @@ div.profile {
     max-width: 7.5rem;
     margin-right: 1rem;
     border-radius: 4px;
+    align-self: flex-start;
   }
 }
 
